--- a/source/style/style.css
+++ b/source/style/style.css
@@ -11,7 +11,8 @@
   font-weight: bold;
 }
 
-* { /* requires a generic font family to fall back into e.g. sans-serif */
+* {
+  /* requires a generic font family to fall back into e.g. sans-serif */
   font-family: Inter, sans-serif;
   font-weight: normal;
 }
