Conform completed container to html naming scheme

--- a/source/style/style.css
+++ b/source/style/style.css
@@ -45,7 +45,7 @@ h3 {
   flex-direction: column;
 }
 
-#completedContainer {
+#completed-container {
   display: flex;
   flex-direction: column;
 }
