--- a/source/style/style.css
+++ b/source/style/style.css
@@ -57,7 +57,7 @@ input[disabled] {
   color: black;
 }
 
-#fixedAddButton {
+#fixed-add-button {
   text-align: center;
   width: 50px;
   height: 50px;
@@ -71,7 +71,7 @@ input[disabled] {
   box-shadow: 3px 3px 5px gray;
 }
 
-#fixedAddButton:hover {
+#fixed-add-button:hover {
   background-color: #02aef2;
   cursor: pointer;
 }
