--- a/source/style/style.css
+++ b/source/style/style.css
@@ -29,6 +29,13 @@ h3 {
   font-weight: bold;
 }
 
+body {
+  background-image: url(https://github.com/ecemgo/mini-samples-great-tricks/assets/13468728/5baf8325-ed69-40b0-b9d2-d8c5d2bde3b0);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
 #logo {
   width: 100px;
   position: absolute;
