--- a/source/style/card.css
+++ b/source/style/card.css
@@ -1,72 +1,81 @@
 .mainContainer {
-    background-color: rgb(124, 136, 224, 0.5);
-    background-image: linear-gradient(
-      240deg,
-      rgb(124, 136, 224) 0%,
-      #c3f4fc 100%
-    );
-    border-radius: 1%;
-    margin-bottom: 5%;
-    overflow: hidden;
-    box-shadow: 3px 3px 5px gray;
-    padding: 10px;
-  }
+  background-color: rgb(124, 136, 224, 0.5);
+  background-image: linear-gradient(
+    240deg,
+    rgb(124, 136, 224) 0%,
+    #c3f4fc 100%
+  );
+  border-radius: 1%;
+  margin-bottom: 5%;
+  overflow: hidden;
+  box-shadow: 3px 3px 5px gray;
+  padding: 10px;
+}
 
-  .headerContainer {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 1%;
-  }
+.headerContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 1%;
+}
 
-  .exerciseHeader {
-    font-size: 20px;
-  }
+.checkbox {
+  margin-right: 10px; /* Adjust as needed */
+}
 
-  .expand-button {
-    cursor: pointer;
-  }
+.exerciseHeader {
+  flex: 1;
+  font-size: 20px;
+}
 
-  .contentContainer {
-    display: flex;
-    flex-direction: row;
-    flex: 1;
-    margin-bottom: 1%;
-  }
+.date {
+  margin-right: 10px; /* Adjust as needed */
+}
 
-  .statsContainer {
-    display: flex;
-    flex-direction: column;
-    flex: 1;
-  }
+.expand-button {
+  cursor: pointer;
+}
 
-  .input-label {
-    font-weight: bold;
-    margin-bottom: 1%;
-  }
+.contentContainer {
+  display: flex;
+  flex-direction: row;
+  flex: 1;
+  margin-bottom: 1%;
+}
 
-  .input-field {
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-    width: 200px;
-  }
+.statsContainer {
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+}
 
-  .notes {
-    resize: vertical;
-    padding: 8px;
-    margin-left: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    box-sizing: border-box;
-    width: 100%;
-    flex: 1;
-  }
+.input-label {
+  font-weight: bold;
+  margin-bottom: 1%;
+}
 
-  .footerContainer {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
+.input-field {
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  width: 200px;
+}
+
+.notes {
+  resize: vertical;
+  padding: 8px;
+  margin-left: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+  width: 100%;
+  flex: 1;
+}
+
+.footerContainer {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
