--- a/source/style/card.css
+++ b/source/style/card.css
@@ -10,7 +10,7 @@
   overflow: hidden;
   box-shadow: 3px 3px 5px gray;
   padding: 10px;
-  width: 60%;
+  width: 100%;
   margin: 0 auto;
   margin-bottom: 2%;
 }
@@ -49,6 +49,7 @@
   font-weight: bold;
   cursor: pointer;
   font-family: cursive;
+  text-align: center;
 }
 
 .date-input { 
@@ -89,7 +90,7 @@
   text-shadow: 2px 2px 4px #000000;
   margin-bottom: 1%;
   font-family: cursive;
-  font-size: 1.15rem;
+  font-size: 18px;
 }
 
 .input-field {
@@ -97,11 +98,11 @@
   margin-bottom: 10px;
   border: 3px solid white;
   color: white;
-  /* text-shadow: 2px 2px 4px #000000; */
   border-radius: 5px;
   box-sizing: border-box;
   width: 200px;
   font-family: cursive;
+  font-size: 16px;
   background-color:rgba(0, 0, 0, 0);
 }
 
@@ -115,16 +116,19 @@
   width: 100%;
   flex: 1;
   background-color:rgba(0, 0, 0, 0);
-  font-size: medium;
+  font-size: 16px;
   font-family: cursive;
   color: white;
-  text-shadow: 2px 2px 4px #000000;
 }
 
 .footerContainer {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: center;
+}
+
+.rightButtons {
+  display: flex;
 }
 
 button {
