--- a/source/style/style.css
+++ b/source/style/style.css
@@ -50,8 +50,18 @@ body {
 }
 
 #scheduledContainer {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 50px;
+  margin-bottom: 2%;
+}
+
+#lineSeperator {
+  width: 101.5%;
+  height: 5px;
+  background-color: rgb(128, 93, 255);
+  margin: 10px 0;
+  border-radius: 5px;
 }
 
 #completedContainer {
