#55 three cards in a row for completed container

--- a/source/style/style.css
+++ b/source/style/style.css
@@ -65,8 +65,10 @@ body {
 }
 
 #completedContainer {
-  display: flex;
-  flex-direction: column;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 50px;
+  margin-bottom: 2%;
 }
 
 * :disabled,
