--- a/source/style/card.css
+++ b/source/style/card.css
@@ -2,7 +2,7 @@
   background-color: rgb(124, 136, 224, 0.5);
   background-image: linear-gradient(
     240deg,
-    rgb(162, 124, 224) 0%,
+    rgba(68, 130, 172, 0.5) 0%,
     #c3f4fc 100%
   );
   border-radius: 1%;
@@ -30,8 +30,8 @@
   padding: 5px;
   border-radius: 5px;
   font-size: 1.25rem;
-  font-weight: bold;
-  font-family: cursive;
+  font-family: Inter;
+  font-weight: 500;
 }
 
 .exerciseType {
@@ -48,7 +48,7 @@
   margin: 0 auto;
   font-weight: bold;
   cursor: pointer;
-  font-family: cursive;
+  font-family: Inter;
   text-align: center;
 }
 
@@ -57,13 +57,14 @@
   border: 0px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
-  font-family: cursive;
+  font-family: Inter;
   background-color:rgba(0, 0, 0, 0);
   font-size: medium;
   cursor: pointer;
-  width: 140px;
+  width: 27%;
   color: white;
   text-shadow: 2px 2px 4px #000000;
+  font-weight: 500;
 }
 
 .expand-button {
@@ -85,12 +86,12 @@
 }
 
 .input-label {
-  font-weight: bold;
   color: white;
   text-shadow: 2px 2px 4px #000000;
   margin-bottom: 1%;
-  font-family: cursive;
+  font-family: Inter;
   font-size: 18px;
+  font-weight: 500;
 }
 
 .input-field {
@@ -101,7 +102,7 @@
   border-radius: 5px;
   box-sizing: border-box;
   width: 200px;
-  font-family: cursive;
+  font-family: Inter;
   font-size: 16px;
   background-color:rgba(0, 0, 0, 0);
 }
@@ -117,7 +118,7 @@
   flex: 1;
   background-color:rgba(0, 0, 0, 0);
   font-size: 16px;
-  font-family: cursive;
+  font-family: Inter;
   color: white;
 }
 
@@ -144,7 +145,7 @@ button {
   cursor: pointer;
   padding: 10px 20px;
   border-radius: 5px;
-  font-family: cursive;
+  font-family: Inter;
 }
 
 button:hover,
