--- a/source/style/style.css
+++ b/source/style/style.css
@@ -15,6 +15,7 @@
   /* requires a generic font family to fall back into e.g. sans-serif */
   font-family: Inter, sans-serif;
   font-weight: normal;
+  box-sizing: border-box;
 }
 
 header {
@@ -24,16 +25,19 @@ header {
 header h1 {
   text-align: center;
   font-weight: bold;
-  font-family: cursive;
-  font-size: 2.5rem;
+  font-family: Inter;
+  font-size: 3.5rem;
+  color: white;
 }
 
 h3 {
   font-weight: bold;
+  color: white;
+  font-size: 1.75rem;
 }
 
 body {
-  background-image: url('../assets/background.png');
+  background-image: url('../assets/background.webp');
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
@@ -51,24 +55,20 @@ body {
 
 #scheduledContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 33% 33% 33%;
   gap: 50px;
   margin-bottom: 2%;
-}
-
-#lineSeperator {
-  width: 101.5%;
-  height: 5px;
-  background-color: rgb(128, 93, 255);
-  margin: 10px 0;
-  border-radius: 5px;
+  padding-right: 5%;
+  margin: 0 auto;
 }
 
 #completedContainer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 33% 33% 33%;
   gap: 50px;
   margin-bottom: 2%;
+  padding-right: 5%;
+  margin: 0 auto;
 }
 
 * :disabled,
