--- a/source/style/style.css
+++ b/source/style/style.css
@@ -83,4 +83,83 @@ input[disabled] {
   cursor: pointer;
 }
 
+header {
+  margin: 0 auto;
+}
 
+header h1 {
+  text-align: center;
+  font-weight: bold;
+  font-family: Inter;
+  font-size: 3.5rem;
+  
+}
+
+h2 {
+  text-align: center;
+}
+
+.form-group {
+  margin-bottom: 20px;
+  align-items: center;
+  text-align: center;
+}
+
+label {
+  display: block;
+  
+  align-items: center;
+  text-align: center;
+}
+
+input[type="text"],
+input[type="email"],
+input[type="password"] {
+  width: 30%;
+  padding: 10px;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  outline: none;
+}
+
+button {
+  display: block;
+  width: 20vh;
+  padding: 10px;
+  font-size: 16px;
+  color: #fff;
+  background-color: rgb(124, 136, 224, 0.5);
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  
+  margin:auto;
+  
+}
+
+button:hover {
+  background-color: #0056b3;
+  align-items: center;
+  text-align: center;
+}
+
+.logout-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: linear-gradient(
+    240deg,
+    rgb(124 136 224) 0%,
+    #c3f4fc 100%
+  );
+  color: white;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+.logout-button:hover {
+  background-color: #4370aa;
+}
