--- a/source/style/style.css
+++ b/source/style/style.css
@@ -85,15 +85,13 @@ input[disabled] {
 
 header {
   margin: 0 auto;
-}
-
-header h1 {
   text-align: center;
   font-weight: bold;
   font-family: Inter;
-  font-size: 3.5rem;
-  
+  font-size: 2.6rem;
 }
+
+
 
 h2 {
   text-align: center;
@@ -163,3 +161,8 @@ button:hover {
 .logout-button:hover {
   background-color: #4370aa;
 }
+
+p{
+  text-align: center;
+}
+
