--- a/source/style/style.css
+++ b/source/style/style.css
@@ -92,8 +92,6 @@ input[disabled] {
 
 
 
-
-
 h2 {
   text-align: center;
 }
@@ -119,7 +117,7 @@ input[type="password"] {
   font-size: 16px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  outline: none;
+  font-family: Inter;
 }
 
 button {
