--- a/source/style/card.css
+++ b/source/style/card.css
@@ -121,7 +121,7 @@
   color: rgb(2, 29, 36);
   border-radius: 5px;
   box-sizing: border-box;
-  width: 200px;
+  width: 90%;
   font-family: Inter;
   font-size: 16px;
 }
@@ -148,44 +148,4 @@
 
 .rightButtons {
   display: flex;
-}
-
-button {
-  background-color:rgba(0, 0, 0, 0);
-  border: none;
-  color: white;
-  text-shadow: 2px 2px 4px #000000;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 1.15rem;
-  margin: 4px 2px;
-  cursor: pointer;
-  padding: 10px 20px;
-  border-radius: 5px;
-  font-family: Inter;
-}
-
-button:hover,
-button:focus,
-button:active,
-button:visited {
-  transition-timing-function: cubic-bezier(0.6, 4, 0.3, 0.8);
-  animation: gelatine 0.5s 1;
-}
-
-@keyframes gelatine {
-  0%,
-  100% {
-    transform: scale(1, 1);
-  }
-  25% {
-    transform: scale(0.9, 1.1);
-  }
-  50% {
-    transform: scale(1.1, 0.9);
-  }
-  75% {
-    transform: scale(0.95, 1.05);
-  }
 }
