--- a/source/style/card.css
+++ b/source/style/card.css
@@ -30,7 +30,7 @@
   padding: 5px;
   border-radius: 5px;
   font-size: 1.25rem;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-weight: 500;
 }
 
@@ -57,7 +57,7 @@
   border: 0px solid #ccc;
   border-radius: 5px;
   box-sizing: border-box;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   background-color:rgba(0, 0, 0, 0);
   font-size: medium;
   cursor: pointer;
@@ -89,7 +89,7 @@
   color: white;
   text-shadow: 2px 2px 4px #000000;
   margin-bottom: 1%;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 18px;
   font-weight: 500;
 }
@@ -102,7 +102,7 @@
   border-radius: 5px;
   box-sizing: border-box;
   width: 200px;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 16px;
   background-color:rgba(0, 0, 0, 0);
 }
@@ -118,7 +118,7 @@
   flex: 1;
   background-color:rgba(0, 0, 0, 0);
   font-size: 16px;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   color: white;
 }
 
@@ -145,7 +145,7 @@ button {
   cursor: pointer;
   padding: 10px 20px;
   border-radius: 5px;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
 }
 
 button:hover,
