--- a/source/style/card.css
+++ b/source/style/card.css
@@ -48,7 +48,7 @@
   margin: 0 auto;
   font-weight: bold;
   cursor: pointer;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   text-align: center;
 }
 
