--- a/source/style/style.css
+++ b/source/style/style.css
@@ -72,27 +72,25 @@ button.toggle:focus {
   outline: none;
 }
 
-#toggleScheduled {
+#toggle-scheduled {
   font-weight: bold;
   font-size: 1.5rem;
 }
 
-#scheduledContainer {
+#scheduled-container {
   display: grid;
   grid-template-columns: 33% 33% 33%;
   gap: 50px;
   margin-bottom: 2%;
   padding-right: 5%;
-  margin: 0 auto;
 }
 
-#completedContainer {
+#completed-container {
   display: none;
   grid-template-columns: 33% 33% 33%;
   gap: 50px;
   margin-bottom: 2%;
   padding-right: 5%;
-  margin: 0 auto;
 }
 
 * :disabled,
@@ -102,7 +100,7 @@ input[disabled] {
   color: black;
 }
 
-#fixedAddButton {
+#fixed-add-button {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -115,14 +113,14 @@ input[disabled] {
   bottom: 10px;
 }
 
-#fixedAddButton:hover,
-#cardioButton:hover,
-#strengthButton:hover {
+#fixed-add-button:hover,
+#cardio-button:hover,
+#strength-button:hover {
   background-color: #4370aa;
   cursor: pointer;
 }
 
-#cardioButton, #strengthButton {
+#cardio-button, #strength-button {
   display: block;
   width: 125px;
   height: 50px;
@@ -134,7 +132,7 @@ input[disabled] {
   transform: scale(0);
 }
 
-@keyframes scaleIn {
+@keyframes scale-in {
   from {
       transform: scale(0);
   }
@@ -143,7 +141,7 @@ input[disabled] {
   }
 }
 
-@keyframes scaleOut {
+@keyframes scale-out {
   from {
       transform: scale(1);
   }
@@ -152,12 +150,12 @@ input[disabled] {
   }
 }
 
-#cardioButton {
+#cardio-button {
   right: 10px;
   bottom: 70px;
 }
 
-#strengthButton {
+#strength-button {
   right: 100px;
   bottom: 10px;
 }
@@ -175,7 +173,7 @@ button {
   cursor: pointer;
   padding: 10px 20px;
   border-radius: 5px;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
 }
 
 button:hover,
