--- a/source/style/card.css
+++ b/source/style/card.css
@@ -122,7 +122,7 @@
   border-radius: 5px;
   box-sizing: border-box;
   width: 90%;
-  font-family: Inter;
+  font-family: Inter, sans-serif;
   font-size: 16px;
 }
 
