--- a/source/style/style.css
+++ b/source/style/style.css
@@ -66,10 +66,11 @@ button.toggle {
   color: white;
   border-radius: 5px;
   background-color: rgba(0, 0, 0, 0);
+  display: inline-block;
 }
 
-button.toggle:focus {
-  outline: none;
+button.toggle:hover {
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 #toggle-scheduled {
@@ -176,12 +177,15 @@ button {
   font-family: Inter, sans-serif;
 }
 
+
+
 button:hover,
 button:focus,
 button:active,
 button:visited {
   transition-timing-function: cubic-bezier(0.6, 4, 0.3, 0.8);
   animation: gelatine 0.5s 1;
+  background-color: rgba(0, 0, 0, 0.2);
 }
 
 @keyframes gelatine {
