--- a/source/style/style.css
+++ b/source/style/style.css
@@ -40,6 +40,12 @@ h3 {
   font-size: 1.75rem;
 }
 
+h4 {
+  font-weight: bold;
+  color: white;
+  font-size: 1rem;
+}
+
 body {
   background-image: url('../assets/background.webp');
   background-repeat: no-repeat;
@@ -103,4 +109,27 @@ input[disabled] {
   cursor: pointer;
 }
 
+#fixed-new-button {
+  display:none;
+  margin-left: 0px;
+}
 
+#fixed-new-button:hover {
+  background-color: #02aef2;
+  cursor: pointer;
+}
+
+#fixed-old-button {
+  display:none;
+  margin-left: 0px;
+}
+
+#fixed-old-button:hover {
+  background-color: #02aef2;
+  cursor: pointer;
+}
+
+#sort-title{
+  display:none;
+  margin-left: 0px;
+}
